UI fix for readonly fields

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                         <label for="voltage">Voltage</label><br>
                         <br>
                         Minimum Capacity<br>
-                        <input type="number" id="capacity" name="capacity" readonly>
+                        <input type="text" id="capacity" name="capacity" readonly>
                         <label for="capacity">Watt hours</label><br>
-                        <input type="number" id="amphours" name="amphours" readonly>
+                        <input type="text" id="amphours" name="amphours" readonly>
                         <label for="amphours">Amp hours</label><br>
                         <br>
                         Fuse Size<br>
-                        <input type="number" id="ampfuse" name="ampfuse" readonly>
+                        <input type="text" id="ampfuse" name="ampfuse" readonly>
                         <label for="ampfuse">Amp</label><br>
                     </fieldset>
                     <fieldset>
@@ -60,12 +60,12 @@
                         <input type="number" min="1" max="24" id="avgsun" name="avgsun" value="5">
                         <label for="avgsun">Avg. sun hours per day</label><br>
                         <br>
-                        <input type="number" id="solarray" name="solarray" readonly>
+                        <input type="text" id="solarray" name="solarray" readonly>
                         <label for="solarray">Watt (minimum)</label><br>
                     </fieldset>
                     <fieldset>
                         <legend>Solar Charge Controller</legend>
-                        <input type="number" id="amperage" name="amperage" readonly>
+                        <input type="text" id="amperage" name="amperage" readonly>
                         <label for="amperage">Amperage (minimum)</label><br>
                     </fieldset>
                 </div>
