--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
                         <input type="number" min="1" max="365" id="backup" name="backup" value="1">
                         <label for="backup">Days of autonomy</label><br>
                     </fieldset>
+                    <fieldset>
+                        <legend>System Diagram</legend>
+                        <img src="solar-power-system-diagram.png" width="100%">
+                    </fieldset>
                 </div>
                 <div class="flex-child">
                     <fieldset>
@@ -67,7 +71,7 @@
                     <fieldset>
                         <legend>Solar Charge Controller</legend>
                         <input type="text" id="amperage" name="amperage" readonly>
-                        <label for="amperage">Amperage (minimum)</label><br>
+                        <label for="amperage">Amp (minimum)</label><br>
                     </fieldset>
                 </div>
             </div>
